--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "memeguild"
 version = "0.1.0"
-authors = ["Dennis Juanito <dennisjuanito@gmail.com>"]
+authors = ["Zavodil"]
 edition = "2018"
 
 [lib]
