--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "deploy:pages": "gh-pages -d dist/",
         "deploy": "npm run build && npm run deploy:pages",
         "prestart": "npm run build:contract && npm run dev:deploy:contract && npm run build:css",
-        "start": "env-cmd -f ./neardev/dev-account.env parcel src/index.html",
+        "start": "export PORT=1235 && env-cmd -f ./neardev/dev-account.env parcel src/index.html",
         "dev": "nodemon --watch assembly -e ts --exec \"npm run start\"",
         "test": "(cd contract && cargo test -- --nocapture && cd ..) && npm run build:contract"
     },
