--- a/package.json
+++ b/package.json
@@ -30,13 +30,15 @@
     "dependencies": {
         "@babel/core": "^7.11.1",
         "@babel/runtime": "^7.11.2",
+        "@material-ui/core": "^4.11.0",
+        "@types/react": "^16.8.6",
         "autoprefix": "^1.0.1",
         "near-api-js": "^0.27.0",
         "postcss": "^7.0.32",
         "postcss-cli": "^7.1.1",
-        "react": ">=15",
+        "react": "^16.8.0",
         "react-bootstrap": "^1.3.0",
-        "react-dom": "^16.11.0",
+        "react-dom": "^16.8.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.0",
         "regenerator-runtime": "^0.13.7",
